# NovelAnalysisByNER

./: .gitignore  README.md  ner.ipynb  pyproject.toml
