[tool.poetry]
name = "novelanalysisbyner"
version = "0.1.0"
description = ""
authors = ["lychee1223 <lychee.vinculum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.2"
fugashi = "^1.3.2"
ipadic = "^1.0.0"
pandas = "^2.2.2"
torch = "^2.3.1"
matplotlib = "^3.9.0"
notebook = "^7.2.1"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
